--- a/src/components/recent_shows.module.css
+++ b/src/components/recent_shows.module.css
@@ -75,3 +75,10 @@
     z-index: 998;
     position: relative;
 }
+
+@media (max-width: 450px) {
+    .container {
+        width: 96%;
+        margin-top: 10px;
+    }
+}
