about page, changed post formats

--- a/src/components/tabletop.module.css
+++ b/src/components/tabletop.module.css
@@ -1,6 +1,7 @@
 .top {
-    background-image: url('../images/tile_wood.jpg');
+    /* background-image: url('../images/tile_wood.jpg');
     background-repeat: repeat;
-    background-size: 50%;
-    padding: 2%;
+    background-size: 50%; */
+    padding: 10%;
+    padding-top: 2%;
 }
