--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -6,7 +6,16 @@ header {
     background: rgb(63,93,170);
     /* border: 1px solid yellow; */
     position: fixed;
+    top: 0;
     z-index: 9999;
+}
+
+.borderClass {
+    border: 1px solid yellow;
+}
+
+.colorClass {
+    background: red;
 }
 
 .site_title {
@@ -35,7 +44,7 @@ header {
 .navbar {
     color: white;
     list-style: none;
-    width: 20%;
+    width: 25%;
     margin: 0;
     margin-left: 5%;
     padding: 0;
