--- a/src/templates/normal-post.module.css
+++ b/src/templates/normal-post.module.css
@@ -31,13 +31,14 @@
     background-size: 100%;
 
     color: black;
-    font-size: 1.5em;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    
+    font-family: 'PT Serif', serif;
+    font-size: 3em;
+    font-weight: 600;
     text-decoration: none;
 
-    padding: 10px;
-    padding-bottom: 20px;
+    padding: 2%;
+    padding-bottom: 2.5%;
     box-shadow: 0 1px 4px rgba(0,0,0,0.5);
 
     margin: 0;
@@ -57,48 +58,18 @@
     color: black;
 }
 
-.innerHTML h2 {
-    background-image: url('../images/tablet.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    width: 94%;
-    padding-top: 12.5%;
-    padding-bottom: 13%;
-    padding-right: 6%;
-    margin: 0;
-    position: relative;
-    top: -5px;
-    z-index: 999;
-}
-
 .innerHTML h2 p {
     display: none;
 }
 
-.innerHTML h6 {
-    margin-top: 5%;
-}
-
-.innerHTML p {
-    background-image: url('../images/tile_paper.jpg');
-    background-repeat: repeat;
-    background-size: 100%;
-    padding: 20px;
-    padding-bottom: 30px;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.5);
-}
-
-.innerHTML img, span {
-    width: 95%;
-    margin-right: 5%;
-    margin-bottom: 20px;
-    padding: 0;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-}
 
 @media (max-width: 450px) {
     .post_title {
         width: 80%;
+        padding-bottom: 4%;
+
+        font-size: 1.5em;
+        
     }
 }
 
