--- a/src/templates/normal-post.module.css
+++ b/src/templates/normal-post.module.css
@@ -62,6 +62,11 @@
     display: none;
 }
 
+figcaption {
+    color: white;
+    font-size: 0.8em;
+}
+
 
 @media (max-width: 450px) {
     .post_title {
