--- a/src/components/hamburger_button.module.css
+++ b/src/components/hamburger_button.module.css
@@ -2,7 +2,7 @@
     display: none;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1300px) {
     .btn {
         display: block;
         width: 2.5em;
@@ -10,7 +10,7 @@
         padding-bottom: 6%;
         margin-left: 5%;
         position: absolute;
-        top: 25%;
+        /* top: 25%; */
         /* top: 1em; */
         z-index: 9999;
         cursor: pointer;
