--- a/src/components/hamburger_menu.module.css
+++ b/src/components/hamburger_menu.module.css
@@ -6,6 +6,7 @@
     background: rgb(63,93,170);
     position: relative;
     z-index: 99999;
+    transition: all 0.3s ease;
 }
 
 .closed {
@@ -36,7 +37,7 @@
     /* margin-left: 15%; */
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1300px) {
     .open {
         padding-top: 20%;
     }
