--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,12 +2,20 @@ header {
     display: inline-block;
     width: 100%;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     background: rgb(63,93,170);
     /* border: 1px solid yellow; */
     position: fixed;
     top: 0;
     z-index: 9999;
+    transition: all 0.3s ease;
+}
+
+.smaller_header {
+    padding: 0;
+    padding-top: 2px;
+    padding-bottom: 6px;
+    transition: all 0.3s ease;
 }
 
 .borderClass {
@@ -18,27 +26,44 @@ header {
     background: red;
 }
 
-.site_title {
-    color: white;
+.title_container {
     text-decoration: none;
     font-size: 1.25em;
-    width: 50%;
     display: inline-block;
-    height: 0;
-    /* border: 1px solid red; */
+    margin-left: 25%;
+    width: 50%;
+    text-align: center;
     position: relative;
-    top: -10px;
-    z-index: -1000;
-    margin-right: 25%;
+    top: -8px;
+    transition: all 0.3s ease;
 }
 
-.site_title h1 {
+.smaller_title_container {
+    text-decoration: none;
+    font-size: 0.75em;
+    display: inline-block;
+    margin-left: 25%;
+    width: 50%;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.site_title {
+    position: relative;
+    z-index: -1000; 
+}
+
+.smaller_site_title {
+    position: relative;
+    z-index: -1000; 
+}
+
+.site_title_text {
     text-align: center;
     display: inline-block;
-    margin-left: 50%;
     text-align: center;
     width: 100%;
-    
+    margin-bottom: 0;
 }
 
 .navbar {
@@ -52,14 +77,12 @@ header {
     float: left;
     position: absolute;
     top: 25%;
-    /* border: 1px solid blue; */
+    transition: all 0.3s ease;
 }
 
 .navbar li {
     display: inline-block;
     margin-right: 15%;
-    /* position: relative;
-    top: -1em; */
 }
 
 .navbar li a {
@@ -69,7 +92,37 @@ header {
     font-size: 1.75em;
     display: block;
     margin: 0;
+    transition: all 0.3s ease;
     /* margin-bottom: 10px; */
+}
+
+.smaller_navbar {
+    color: white;
+    list-style: none;
+    width: 25%;
+    margin: 0;
+    margin-left: 5%;
+    padding: 0;
+    display: inline-block;
+    float: left;
+    position: absolute;
+    top: 15%;
+    transition: all 0.3s ease;
+}
+
+.smaller_navbar li {
+    display: inline-block;
+    margin-right: 15%;
+}
+
+.smaller_navbar li a {
+    color: white;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.25em;
+    display: block;
+    margin: 0;
+    transition: all 0.3s ease;
 }
 
 .socialbar {
@@ -85,18 +138,48 @@ header {
     position: absolute;
     top: 25%;
     cursor: pointer;
-    /* border: 1px solid green; */
+    transition: all 0.3s ease;
 }
 
-.socialbar a {
+.smaller_socialbar {
+    list-style: none;
+    width: 20%;
+    margin: 0;
+    float: right;
+    text-align: right;
+    margin-right: 2%;
+    padding: 0;
+    height: 0;
+    display: inline-block;
+    position: absolute;
+    top: 20%;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.socialbar_link {
     width: 2.5em;
     display: inline-block;
     margin-right: 7.5%;
     z-index: 99999;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-.socialbar a:nth-child(3) {
+.smaller_socialbar_link {
+    width: 1.5em;
+    display: inline-block;
+    margin-right: 3%;
+    z-index: 99999;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.socialbar_link:nth-child(3) {
+    margin-right: 15%;
+}
+
+.smaller_socialbar_link:nth-child(3) {
     margin-right: 15%;
 }
 
@@ -152,23 +235,27 @@ header {
     display: none;
 }
 
-@media (max-width: 1250px) {
-    .site_title {
-        font-size: 1.5em;
-        position: relative;
-        top: -0.5em;
+@media (max-width: 1300px) {
+    .smaller_header {
+        padding-top: 10px;
+        padding-bottom: 15px;
     }
     .navbar {
         display: none;
     }
-    
+    .smaller_navbar {
+        display: none;
+    }
+    .smaller_socialbar_link {
+        width: 2em;
+    }
 }
 
 @media (max-width: 1000px) {
-    .site_title {
-        font-size: 1.25em;
-    }
     .socialbar a:nth-child(2) {
+        display: none;
+    }
+    .smaller_socialbar a:nth-child(2) {
         display: none;
     }
     .ham_youtube {
@@ -186,6 +273,9 @@ header {
 
 @media (max-width: 550px) {
     .socialbar {
+        display: none;
+    }
+    .smaller_socialbar {
         display: none;
     }
     .ham_instagram {
@@ -214,15 +304,33 @@ header {
 }
 
 @media (max-width: 500px) {
+    header {
+        padding-bottom: 12px;
+    }
+    .smaller_header {
+        padding-bottom: 12px;
+    }
     .navbar {
         display: none;
     }
+    .title_container {
+        font-size: 1em;
+        margin-left: 25%;
+        width: 70%;
+
+    }
+    .smaller_title_container {
+        font-size: 0.8em;
+        margin-left: 25%;
+        width: 70%;
+        top: 0;
+    }
     .site_title {
         font-size: 1em;
-        width: 75%;
+        width: 100%;
     }
-    .site_title h1 {
-        margin-left: 25%;
+    .site_title_text {
+        text-align: right;
     }
 }
 
