--- a/src/components/recent_works.module.css
+++ b/src/components/recent_works.module.css
@@ -48,6 +48,25 @@
 
 .billboard_container li:nth-child(1) {
     margin-left: 1%;
+    -webkit-transform: perspective(1000px) rotateX(19deg) scaleY(1.07);
+    -webkit-transform-origin: right center;
+    position: relative;
+    top: -10px;
+    right: 4px;
+}
+
+.billboard_container li:nth-child(2) {
+    position: relative;
+    top: -4px;
+    -webkit-transform: scale(1.03, 1.01);
+}
+
+.billboard_container li:nth-child(3) {
+    -webkit-transform: perspective(1000px) rotateX(19deg) scaleY(1.07);
+    -webkit-transform-origin: left center;
+    position: relative;
+    top: -10px;
+    right: -4px;
 }
 
 .ad {
