--- a/src/components/about_body.module.css
+++ b/src/components/about_body.module.css
@@ -3,6 +3,8 @@
     margin: auto;
     background: white;
     padding: 50px;
+    /* margin-top: 100px; */
+    margin-bottom: 50px;
 }
 
 .aboutbody p {
@@ -12,3 +14,23 @@
 .aboutbody a {
     float: right;
 }
+
+/* .portfolioaboutbody {
+    width: 40%;
+    margin: auto;
+    background: white;
+    padding: 50px;
+}
+
+.portfolioaboutbody h1 {
+    color: black;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    display: inline-block;
+    width: 49%;
+}
+
+.portfolioaboutbody p {
+    margin-bottom: 20px;
+} */
