--- a/src/components/design_meta.module.css
+++ b/src/components/design_meta.module.css
@@ -13,6 +13,7 @@
     float: right;
 }
 
+
 .meta h3 {
     text-align: right;
     color: gray;
@@ -248,4 +249,132 @@
     grid-column-end: 3;
     margin-top: 0;
     align-self: start;
+}
+
+@media (max-width: 1250px) {
+    .cover {
+        width: 100%;
+        display: inline-block;
+        box-shadow: none;
+        margin: auto;
+    }
+    .meta {
+        margin-top: 25px;
+        width: 100%;
+        display: inline-block;
+        text-align: left;
+        float: none;
+    }
+    .meta h3 {
+        text-align: left;
+    }
+    .container {
+        width: 100%;
+        margin-top: 75px;
+        padding-bottom: 0px;
+        display: inline-block;
+    }
+    .container h1 {
+        margin-top: 100px;
+        margin-bottom: 10px;
+        font-size: 0.75em;
+    }
+    .container h2 {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .container h3 {
+        margin-top: 0;
+        width: 100%;
+    }
+    .container span {
+        margin-bottom: 30px;
+    }
+    .container p {
+        width: 100%;
+    }
+    .container ol {
+        padding-right: 10px;
+    }
+    .container ul {
+        padding-right: 10px;
+    }
+    .full_width_image {
+        position: relative;
+        left: 0;
+        width: 100%;
+    }
+}
+
+@media (max-width: 750px) {
+    .container {
+        width: 100%;
+        margin-top: 75px;
+        padding-bottom: 0px;
+        display: inline-block;
+    }
+    .container h1 {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-size: 0.75em;
+    }
+    .container h2 {
+        width: 100%;
+        /* font-size: 1em; */
+        margin-bottom: 30px;
+    }
+    .container h3 {
+        margin-top: 0;
+        width: 100%;
+    }
+    .container span {
+        margin-bottom: 30px;
+    }
+    .container p {
+        width: 100%;
+    }
+    .container ol {
+        padding-right: 10px;
+    }
+    .container ul {
+        padding-right: 10px;
+    }
+    .full_width_image {
+        position: relative;
+        left: 0;
+        width: 100%;
+    }
+    .text_pair {
+        grid-template-columns: auto;
+    }
+    .text_pair span {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+    .text_pair img {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+    .text_pair h4 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        margin-top: 0;
+    }
+    .img_pair {
+        grid-template-columns: auto;
+    }
+    .img_pair span {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+    .img_pair img {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        margin-bottom: 20px;
+    }
+    .img_pair h4 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        margin-top: 0;
+    }
 }
