--- a/src/components/design_projects.module.css
+++ b/src/components/design_projects.module.css
@@ -5,19 +5,50 @@
     font-size: 3em;
 }
 
+.project1_container {
+    width: 100%;
+    height: 500px;
+    background: radial-gradient(farthest-corner at bottom right, rgba(238,115,123,1), rgba(52,46,56,1));
+}
+
+.project1_container h2 {
+    color: white;
+    font-size: 3em;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    text-align: right;
+    float: right;
+    margin-right: 20%;
+    margin-top: 100px;
+}
+
+.project1_img {
+    width: 300px;
+    margin-left: 20%;
+    height: 600px;
+    background: transparent;
+    background-image: url("../post_images/kidspool/iphone_frame.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
 .projectsContainer {
     list-style: none;
     padding: 0;
     width: 90%;
     margin: auto;
-    text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .project {
-    width: 25%;
+    width: 32%;
     display: inline-block;
-    margin: 4%;
+    margin-bottom: 1%;
+}
+
+.project:nth-child(3n + 2) {
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .projectTitle {
