fixed some margins

--- a/src/components/cv_table.module.css
+++ b/src/components/cv_table.module.css
@@ -52,3 +52,14 @@
         width: 90%;
     }
 }
+
+@media (max-width: 550px) {
+    .cvtable {
+        padding: 0;
+
+    }
+
+    .cvtable h1 {
+        margin-left: 0;
+    }
+}
