--- a/src/components/about_body.module.css
+++ b/src/components/about_body.module.css
@@ -15,6 +15,28 @@
     float: right;
 }
 
+@media (max-width: 750px) {
+    .aboutbody {
+        padding: 0;
+        margin: 0;
+        margin-left: 10%;
+        width: 80%;
+    }
+
+    
+}
+
+@media (max-width: 550px) {
+    .aboutbody {
+        padding: 0;
+        margin: 0;
+        margin-left: 5%;
+        width: 90%;
+    }
+
+    
+}
+
 /* .portfolioaboutbody {
     width: 40%;
     margin: auto;
