--- a/src/components/ground.module.css
+++ b/src/components/ground.module.css
@@ -12,6 +12,13 @@
     top: -50px;
 }
 
+.dirt_gradient {
+    width: 100%;
+    background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1) 70%, rgba(0,0,0,1) 100%);
+    height: 0;
+    padding-bottom: 35%;
+}
+
 .dirt {
     background-image: url('../images/dirt.png');
     background-repeat: repeat;
