--- a/src/templates/design-post.module.css
+++ b/src/templates/design-post.module.css
@@ -1,5 +1,5 @@
 .post_container {
-    padding-top: 150px;
+    /* padding-top: 150px; */
     width: 70%;
     margin: auto;
     /* border: 1px solid red; */
@@ -19,7 +19,7 @@ h1.title {
     color: black;
     font-size: 2em;
     margin-bottom: 0;
-    font-weight: 400;
+    font-weight: 800;
 }
 
 iframe {
@@ -29,14 +29,16 @@ iframe {
 @media (max-width: 750px) {
     .post_container {
         padding: 0;
-        padding-top: 150px;
+        /* padding-top: 150px; */
         width: 90%;
     }
 }
 @media (max-width: 500px) {
     .post_container {
         padding: 0;
-        padding-top: 100px;
         width: 90%;
+    }
+    .post_container h1 {
+        margin-left: 0;
     }
 }
